--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	      	<div class="overlay"></div>
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/IMG_1150.JPG);">
+	          	<div class="one-third js-fullheight order-md-last img"    style="background-image:url(images/IMG_1150.JPG);">
 	          	 <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -362,8 +362,8 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Data Analyst Intern</span>
 						<h2>May 2023 - August 2023</h2>
-						<span class="position">The Association Partner</span>
-						<p class="mt-4">Remote, USA. 
+						<span class="position">Remote, USA</span>
+						<p class="mt-4">The Association Partner. 
 							<ul>
 								<li>Streamlined data processing using advanced Excel and SQL.</li>
 								<li>Enhanced profitability with Power BI and Tableau cost analysis.</li>
@@ -378,8 +378,8 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Business Analyst</span>
 						<h2>June 2021 - July 2022</h2>
-						<span class="position">NielsenIQ</span>
-						<p class="mt-4">Chicago, IL. 
+						<span class="position">Chicago, IL</span>
+						<p class="mt-4">NielsenIQ. 
 							<ul>
 								<li>Managed client data delivery and analysis for companies like L'Oréal and Mondelez.</li>
 								<li>Ensured compliance with data quality standards and schedules.</li>
@@ -395,8 +395,8 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Analytics Intern</span>
 						<h2>May 2020 - August 2020</h2>
-						<span class="position">eClinicalWorks</span>
-						<p class="mt-4">Gujarat,India  
+						<span class="position">Gujarat,India</span>
+						<p class="mt-4">eClinicalWorks  
 							<ul>
 								<li>Improved data processing efficiency for healthcare IT solutions.</li>
 								<li>Managed IT service backlogs using Azure.</li>
@@ -514,7 +514,7 @@
 				<div class="text mt-3 float-right d-block">
   
 				  <h3 class="heading"><a href="https://github.com/Jeetp25/customer_segmentation">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <p>Developed a model to give various recommendations of financial products &amp; services on target customer groups.</p>
 				</div>
 			  </div>
 			</div>
