--- a/index update.html
+++ b/index update.html
@@ -220,18 +220,18 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Jeet Patel </span></p>
-										<p><span class="title-s">Job Role: </span> <span>Business / Data Analyst </span></p>
-										<p><span class="title-s">Experience: </span> <span>3 Years 4 Months</span></p>
-										<p><span class="title-s">Address: </span> <span>Gainesville, FL, USA</span></p>
+										<p><span class="title-s">Job Role: </span> <span> IT - Business Analyst </span></p>
+										<p><span class="title-s">Experience: </span> <span>3+Years </span></p>
+										<p><span class="title-s">Address: </span> <span>New Jersey,USA</span></p>
 									  </div>
 									</div>
 								  </div>
 
 								<div class="skill-mf">
 									<p class="title-s">Skills</p>
-									<span>SQL</span> <span class="pull-right">95%</span>
+									<span>SQL</span> <span class="pull-right">80%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
+										<div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
@@ -331,7 +331,9 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Business Intelligence and Analytics expert with a strong background in data analysis, visualization, and tech consulting, currently pursuing an MS in Information Systems at the University of Florida..</p>
+            <p>Versatile BI and analytics expert with 3+ years of experience turning data into strategy. Proven track record in Power BI, SQL, SAP,
+				and Tableau. Drives innovation through cross-functional leadership, stakeholder alignment, and end-to-end product execution.
+				Recognized for delivering impactful solutions and leading transformative, high-value projects.</p>
           </div>
         </div>
 
@@ -345,13 +347,14 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Technology Consulting Analyst</span>
-						<h2> August 2023 - June 2024</h2>
-						<span class="position">Jacksonville, FL</span>
-						<p class="mt-4">Smart North Florida. 
+						<h2> May 2024 - Present</h2>
+						<span class="position">Matawan, NJ</span>
+						<p class="mt-4">Key Food Stores Co-Operative Inc. 
 							<ul>
-								<li>Utilized ArcGIS for community planning data collection.</li>
-								<li>Developed a Tableau dashboard for investment opportunity analysis.</li>
-								<li>Secured $8.5 million in CRA funding through analytical research and proposal writing.</li>
+								<li>Drove a 60% increase in data readiness across teams by optimizing business processes using Salesforce and NetSuite.</li>
+								<li>Designed a comprehensive Tableau and PowerBI dashboard for analyzing potential investment opportunities in key infrastructure areas.</li>
+								<li>Conducted exploratory data analysis and feature engineering to develop predictive models that ensured data-driven decision-making.</li>
+								<li>Spearheaded analytical research using SQL and R-Studio to secure $8.5 million in CRA funding.</li>
 							</ul>
 						</p>
 					</div>
@@ -360,14 +363,15 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Data Analyst Intern</span>
-						<h2>May 2023 - August 2023</h2>
+						<span class="date">Technology Consulting Analyst</span>
+						<h2>January 2023 - May 2024</h2>
 						<span class="position">Remote, USA</span>
-						<p class="mt-4">The Association Partner. 
+						<p class="mt-4">Smart North Florida. 
 							<ul>
-								<li>Streamlined data processing using advanced Excel and SQL.</li>
-								<li>Enhanced profitability with Power BI and Tableau cost analysis.</li>
-								<li>Improved marketing strategies through Google Analytics and sales data evaluation.</li>
+								<li>Drove a 60% increase in data readiness across teams by optimizing business processes using Salesforce and NetSuite.</li>
+								<li>Designed a comprehensive Tableau and PowerBI dashboard for analyzing potential investment opportunities in key infrastructure areas.</li>
+								<li>Conducted exploratory data analysis and feature engineering to develop predictive models that ensured data-driven decision-making.</li>
+								<li>Spearheaded analytical research using SQL and R-Studio to secure $8.5 million in CRA funding.</li>
 							</ul>
 						</p>
 					</div>
@@ -377,7 +381,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Business Analyst</span>
-						<h2>June 2021 - July 2022</h2>
+						<h2>January 2021 - July 2022</h2>
 						<span class="position">Chicago, IL</span>
 						<p class="mt-4">NielsenIQ. 
 							<ul>
@@ -395,7 +399,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Analytics Intern</span>
 						<h2>May 2020 - August 2020</h2>
-						<span class="position">Gujarat,India</span>
+						<span class="position">Remote, USA</span>
 						<p class="mt-4">eClinicalWorks  
 							<ul>
 								<li>Improved data processing efficiency for healthcare IT solutions.</li>
@@ -420,9 +424,9 @@
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2018-2021</span>
-    					<h2>Bachelor of Business Adminstration and Management</h2>
-						<h2>Post-Graduate Diploma in Financial Management</h2>
+						<span class="date">Bachelors (BSC) Degree / Post Graudate Diploma</span>
+    					<h2>Business Adminstration and Management</h2>
+						<h2>Financial Management and Enterpreneurship</h2>
     					<span class="position">The Maharaja Sayajirao University of Baroda (MSU)</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
@@ -430,8 +434,8 @@
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2022-2024</span>
-    					<h2>Master of Science in Information Systems and Operations Management (MS-ISOM)</h2>
+						<span class="date">Masters ( MSC) Degree</span>
+    					<h2> Information Systems and Operations Management (MS-ISOM)</h2>
 						<h2>Track: Business Intelligence and Analytics</h2>
     					<span class="position">The University of Florida, Warrington College of Business</span>
     					<p class="mt-4">Grade: 3.5 / 4 GPA </p>
@@ -441,7 +445,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="images/Jeet patel GA .pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="images/Jeet_Patel_Resume (5).pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -594,7 +598,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Gainesville, Florida, USA</p>
+	            <p>New Jersey (Open to Relocate), USA</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
