--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Technology Consulting Analyst</span>
+						<span class="date">Business Analyst - IT Solution Services</span>
 						<h2> May 2024 - Present</h2>
 						<span class="position">Matawan, NJ</span>
 						<p class="mt-4">Key Food Stores Co-Operative Inc. 
