--- a/index.html
+++ b/index.html
@@ -351,10 +351,10 @@
 						<span class="position">Matawan, NJ</span>
 						<p class="mt-4">Key Food Stores Co-Operative Inc. 
 							<ul>
-								<li>Drove a 60% increase in data readiness across teams by optimizing business processes using Salesforce and NetSuite.</li>
-								<li>Designed a comprehensive Tableau and PowerBI dashboard for analyzing potential investment opportunities in key infrastructure areas.</li>
-								<li>Conducted exploratory data analysis and feature engineering to develop predictive models that ensured data-driven decision-making.</li>
-								<li>Spearheaded analytical research using SQL and R-Studio to secure $8.5 million in CRA funding.</li>
+								<li>System Validation & Accuracy: Led SAP Fiori testing and validation, achieving 85% pricing accuracy and reducing offer discrepancies by 40%.</li>
+								<li>Requirements Management: Collaborated with stakeholders to define ERP/CAR requirements and create functional specifications, cutting scope changes by 10%.</li>
+								<li>Process Optimization & UAT: Enhanced system workflows and implemented changes that reduced manual tasks by 15% and managed UAT/backlog in ServiceNow.</li>
+								<li>Architecture & Adoption: Modeled the CMDB structure in MS Visio to improve data visibility and increased user adoption post-launch by reducing support tickets.</li>
 							</ul>
 						</p>
 					</div>
